@@ -56,6 +56,7 @@ Bill Winder <wgwinder@gmail.com>
 Niki Spahiev
 flerda (http://code.google.com/u/flerda/)
 Davorin Kunstelj (http://code.google.com/u/davorin.kunstelj/)
+Russell Yanofsky <russell@yanofsky.org>
 
 
 Erik gets a special mention for the contribution of the "Showcase".
