@@ -56,6 +56,7 @@ Copyright: 2010 Niki Spahiev
 Copyright: 2010 flerda (http://code.google.com/u/flerda/)
 Copyright: 2010, Tobias Weber <tobi-weber@gmx.de>
 Copyright: 2010 Davorin Kunstelj (http://code.google.com/u/davorin.kunstelj/)
+Copyright: 2010 Russell Yanofsky <russell@yanofsky.org>
 
 Files: examples/flowpanel/*
 Copyright: 2009 jordonwii (http://code.google.com/u/jordonwii)
